--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
    <head>
+
        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
        <script src="class.base.js"></script>
        <script src="class.grass.js"></script>
@@ -7,8 +8,11 @@
        <script src="class.predator.js"></script>
        <script src="class.virus.js"></script>
        <script src="class.sanitar.js"></script>
-	  <script src="script.js"></script>
+	  
    </head>
    <body>
+       <p id="exanak">Garun<p>
+
+      <script src="script.js"></script>
    </body>
 </html>
