--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
        <script src="class.predator.js"></script>
        <script src="class.virus.js"></script>
        <script src="class.sanitar.js"></script>
-	  
-   </head>
+	  <script src = "class.sanitar.1.js"></script>
+ </head>
    <body>
        <p id="exanak">Garun<p>
      
