--- a/index.html
+++ b/index.html
@@ -12,7 +12,55 @@
  </head>
    <body>
        <p id="exanak">Garun<p>
-     
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <h1>Ծրագրավորում III Երևան</h1>
+                </tr>
+                <tr>
+                    <h1>Անուն Ազգանուն</h1>
+                </tr>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Գույն</th>
+                    <th scope="col">Նկարագրություն</th>
+                    <th scope="col">Ծնվել է</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td scope="row" style="background-color:green;"></td>
+                    <td></td>
+                    <td id="grassCount"></td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td scope="row" style="background-color:yellow;"></td>
+                    <td></td>
+                    <td id="grassEaterCount"></td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td scope="row" style="background-color:red;"></td>
+                    <td></td>
+                    <td id="predatorCount"></td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td scope="row" style="background-color:rgb(0, 0, 0);"></td>
+                    <td></td>
+                    <td id="virusCount"></td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td scope="row" style="background-color:rgb(73, 255, 131);"></td>
+                    <td></td>
+                    <td id="sanitarCount"></td>
+                </tr>
+            </tbody>
+        </table>
+    
 
       <script src="script.js"></script>
    </body>
