--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <html>
    <head>
 
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-       <script src="class.base.js"></script>
-       <script src="class.grass.js"></script>
-       <script src="class.grasseater.js"></script>
-       <script src="class.predator.js"></script>
-       <script src="class.virus.js"></script>
-       <script src="class.sanitar.js"></script>
-	  <script src = "class.sanitar.1.js"></script>
+      
  </head>
    <body>
        <p id="exanak">Garun<p>
@@ -60,8 +53,9 @@
                 </tr>
             </tbody>
         </table>
-    
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
       <script src="script.js"></script>
    </body>
 </html>
