--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
 <html>
    <head>
 
-      
+    <style>
+        canvas {
+            display: block;
+            margin: 0 auto;
+        }
+        div {
+            display: inline-block;
+        }
+        h4 {
+         
+            text-align: center;
+        }
+        body {
+            font-family: 'Noto Sans', sans-serif !important;
+        }
+        #unic{
+            height:15px;
+            width: 30px;
+            background-color:black;
+            border: 1px solid black;
+            color:white;
+            border-radius: 15px;
+        }
+    </style>
  </head>
    <body>
-       <p id="exanak">Garun<p>
+       <h4 id="exanak">Գարուն<h4>
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <h1>Ծրագրավորում III Երևան</h1>
+                    <h4>Ծրագրավորում III Երևան</h4>
                 </tr>
                 <tr>
-                    <h1>Անուն Ազգանուն</h1>
+                    <h4>Դավիթ Մակարյան</h4>
                 </tr>
                 <tr>
                     <th scope="col">#</th>
@@ -24,35 +47,37 @@
                 <tr>
                     <th scope="row">1</th>
                     <td scope="row" style="background-color:green;"></td>
-                    <td></td>
+                    <td>Կանաչը խոտն է, որը բազմանում է N ցիկլը մեկ,մահանում է երբ նրան ուտում է խոտակերը</td>
                     <td id="grassCount"></td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td scope="row" style="background-color:yellow;"></td>
-                    <td></td>
+                    <td>Դեղինը խոտակերն է, որը սնվում է խոտով,ունի էներգիա որը ավելանում է խոտ ուտելու դեպքում և կարող է բազմանալ երբ էներգիան մեծ կամ հավասար լինի 8-ի</td>
                     <td id="grassEaterCount"></td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td scope="row" style="background-color:red;"></td>
-                    <td></td>
+                    <td>Կարմիրը գիշատիչն է,որը սնվում է խոտակերներով :Կախված եղանակից պահում է իրեն տարբեր կերպով</td>
                     <td id="predatorCount"></td>
                 </tr>
                 <tr>
                     <th scope="row">4</th>
                     <td scope="row" style="background-color:rgb(0, 0, 0);"></td>
-                    <td></td>
+                    <td>Սևը վրուսն է որը վերացնում է իր տեսադաշտում ընկած կերպարներին։Մահանալուց առաջ ստուգում բոլոր կերպարների քանակները և իր փոխարեն ստեղծում առավել փոքրաքանակ կերպարին
+                    </td>
                     <td id="virusCount"></td>
                 </tr>
                 <tr>
                     <th scope="row">5</th>
-                    <td scope="row" style="background-color:rgb(73, 255, 131);"></td>
-                    <td></td>
+                    <td scope="row" style="background-color:rgb(73, 255, 255);"></td>
+                    <td>Բաց կապույտը Սանիտարն է ։ Այն փնտրում և ոչնչացնում է վրուսներին</td>
                     <td id="sanitarCount"></td>
                 </tr>
             </tbody>
         </table>
+        <div id="unic">Create Bomb</div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
         <script src="/socket.io/socket.io.js"></script>
