--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                 <tr>
                     <th scope="row">1</th>
                     <td scope="row" style="background-color:green;"></td>
-                    <td>Կանաչը խոտն է, որը բազմանում է N ցիկլը մեկ,մահանում է երբ նրան ուտում է խոտակերը</td>
+                    <td>Կանաչը խոտն է ,ամռանը բազմանում է ավելի արագ քան մյուս եղանակներին , չի բազմանում ձմռանը ,մահանում է երբ նրան ուտում է խոտակերը</td>
                     <td id="grassCount"></td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td scope="row" style="background-color:yellow;"></td>
-                    <td>Դեղինը խոտակերն է, որը սնվում է խոտով,ունի էներգիա որը ավելանում է խոտ ուտելու դեպքում և կարող է բազմանալ երբ էներգիան մեծ կամ հավասար լինի 8-ի</td>
+                    <td>Դեղինը խոտակերն է, որը սնվում է խոտով,ունի սկզբնական էներգիա որը տարբեր է լինում կախված եղանակից:Էներգիա ավելանում է խոտ ուտելու դեպքում և կարող է բազմանալ երբ էներգիան մեծ կամ հավասար լինի 8-ի</td>
                     <td id="grassEaterCount"></td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td scope="row" style="background-color:red;"></td>
-                    <td>Կարմիրը գիշատիչն է,որը սնվում է խոտակերներով :Կախված եղանակից պահում է իրեն տարբեր կերպով</td>
+                    <td>Կարմիրը գիշատիչն է,որը սնվում է խոտակերներով :Կախված եղանակից պահում է իրեն տարբեր կերպով:Մահանալուց պատահական կերպով իր փոխարեն ստեղծում է Վիրուս</td>
                     <td id="predatorCount"></td>
                 </tr>
                 <tr>
@@ -72,7 +72,7 @@
                 <tr>
                     <th scope="row">5</th>
                     <td scope="row" style="background-color:rgb(73, 255, 255);"></td>
-                    <td>Բաց կապույտը Սանիտարն է ։ Այն փնտրում և ոչնչացնում է վրուսներին</td>
+                    <td>Բաց կապույտը Սանիտարն է ։ Այն փնտրում և ոչնչացնում է վրուսներին:Բազմանում է երբ ոչնչացնում է 3 Վիրուսի</td>
                     <td id="sanitarCount"></td>
                 </tr>
             </tbody>
