--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             text-align: center;
         }
         body {
+            background-color: white;
             font-family: 'Noto Sans', sans-serif !important;
         }
         #unic{
-            height:15px;
-            width: 30px;
+            height:50px;
+            width: 150px;
             background-color:black;
             border: 1px solid black;
             color:white;
@@ -59,7 +60,7 @@
                 <tr>
                     <th scope="row">3</th>
                     <td scope="row" style="background-color:red;"></td>
-                    <td>Կարմիրը գիշատիչն է,որը սնվում է խոտակերներով :Կախված եղանակից պահում է իրեն տարբեր կերպով:Մահանալուց պատահական կերպով իր փոխարեն ստեղծում է Վիրուս</td>
+                    <td>Կարմիրը գիշատիչն է,որը սնվում է խոտակերներով :Կախված եղանակից պահում է իրեն տարբեր կերպով:Օրինակ ձմռանը մեծանում է իր տեսադաշտը</td>
                     <td id="predatorCount"></td>
                 </tr>
                 <tr>
@@ -72,12 +73,12 @@
                 <tr>
                     <th scope="row">5</th>
                     <td scope="row" style="background-color:rgb(73, 255, 255);"></td>
-                    <td>Բաց կապույտը Սանիտարն է ։ Այն փնտրում և ոչնչացնում է վրուսներին:Բազմանում է երբ ոչնչացնում է 3 Վիրուսի</td>
+                    <td>Բաց կապույտը Սանիտարն է ։ Այն փնտրում և ոչնչացնում է վրուսներին:Բազմանում է երբ ոչնչացնում է 3 Վիրուսի:Մահանալուց պատահական կերպով ստեղծում է խոտակեր կամ գիշատիչն</td>
                     <td id="sanitarCount"></td>
                 </tr>
             </tbody>
         </table>
-        <div id="unic">Create Bomb</div>
+        <div id="unic">Change background-color</div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
         <script src="/socket.io/socket.io.js"></script>
